--- a/paper/arxiv.sty
+++ b/paper/arxiv.sty
@@ -1,3 +1,5 @@
+%based on the Arxiv style of George Kour (available at https://github.com/kourgeorge/arxiv-style)
+
 \NeedsTeXFormat{LaTeX2e}
 
 \ProcessOptions\relax
@@ -24,24 +26,17 @@
 \flushbottom
 \sloppy
 
-
-
-\newcommand{\headeright}{A Preprint}
-\newcommand{\undertitle}{A Preprint}
-\newcommand{\shorttitle}{\@title}
-
 \usepackage{fancyhdr}
 \fancyhf{}
 \pagestyle{fancy}
-\renewcommand{\headrulewidth}{0.4pt}
+\renewcommand{\headrulewidth}{0pt}
 \fancyheadoffset{0pt}
-\rhead{\scshape \footnotesize \headeright}
-\chead{\shorttitle}
+\rhead{ \textit{PRIME AI paper}} %\scshape A preprint - \today  \number\year
 \cfoot{\thepage}
 
 
 %Handling Keywords
-\def\keywordname{{\bfseries \emph{Keywords}}}%
+\def\keywordname{{\bfseries \emph Keywords}}%
 \def\keywords#1{\par\addvspace\medskipamount{\rightskip=0pt plus1cm
 \def\and{\ifhmode\unskip\nobreak\fi\ $\cdot$
 }\noindent\keywordname\enspace\ignorespaces#1\par}}
@@ -223,7 +218,7 @@
     \centering
     {\LARGE\sc \@title\par}
     \@bottomtitlebar
-    \textsc{\undertitle}\\
+    % \textsc{ }\\ %A Preprint
     \vskip 0.1in
     \def\And{%
       \end{tabular}\hfil\linebreak[0]\hfil%
@@ -234,7 +229,7 @@
       \begin{tabular}[t]{c}\bf\rule{\z@}{24\p@}\ignorespaces%
     }
     \begin{tabular}[t]{c}\bf\rule{\z@}{24\p@}\@author\end{tabular}%
-  \vskip 0.4in \@minus 0.1in \center{\@date}   \vskip 0.2in
+  \vskip 0.4in \@minus 0.1in \center{ }   \vskip 0.2in %\today
   }
 }
 
